# nix-templates

./: flake.nix
cpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  default.nix  flake.nix  justfile
cpp/include/: foo.h
cpp/tests/: CMakeLists.txt  test_foo.cpp  tests.cpp
cpp/tests/include/: mock_foo.h
python/: .dockerignore  .gitignore  Dockerfile  flake.nix  justfile  pyproject.toml
python/.github/workflows/: ci.yml
python/app/: cli.py
python/tests/: test_cli.py  test_core.py
rust/: Cargo.toml  Dockerfile  flake.nix
scala/: .dockerignore  Dockerfile  build.sbt  flake.nix
scala/.github/workflows/: ci.yml
scala/project/: plugins.sbt
streamlit-component/: README.md  app.py  justfile  pyproject.toml  shell.nix
streamlit-component/st_component/: __init__.py
streamlit-component/st_component/frontend/: index.html  package.json  pnpm-lock.yaml
streamlit-component/st_component/frontend/src/: App.tsx  main.tsx
typescript/: biome.json  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.prod.json
typescript/.github/workflows/: ci.yml
