[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Andrew <wty.andrew@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.9"

[tool.poetry.scripts]
run = "app.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
preview = true
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
case-sensitive = true
force-to-top = ["typing", "types"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "preserve"
