[tool.poetry]
name = "st-component"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
preview = true
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
case-sensitive = true
force-to-top = ["typing"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "preserve"
